# ray4laz

./: .gitattributes  .gitignore  LICENSE  ProjectOptions_20260214_185801_raylib_custom1.txt  README.md  README_mac_mseries.md  archive  build_dev.sh  build_gizmo.sh  build_r3d.sh  builds_raylib.sh  builds_raylib_dev.sh  clean.sh  fpc-wrapper.bat  fpc-wrapper.sh  package.7z  raygui.c
MSEIde/: core_basic_window.prj
examples/: README.md  audio_module_playing.lpi
headers/: Makefile  builds.sh  compile  raylib.h
headers/extras/ray-gizmo/: CMakeLists.txt  raygizmo.c  raygizmo.h
headers/extras/ray-gizmo/src/: raygizmo.c  raygizmo.h
headers/extras/ray-media/: CMakeLists.txt  LICENSE.md  raymedia.h  rmedia.c
headers/extras/ray-media/src/: rmedia.c  rmedia.h
package/: ProjectGroup1.groupproj  RAY_ICON.res  cam_unit.lfm  cam_unit.pas  httpdownloader.pas  ray4delphi.dpk  ray4delphi.dproj  ray4delphi.res  ray4delphi_reg.pas  ray4laz.lpk  ray4laz.pas  ray4laz_customappprj.pas  ray4laz_descript.pas  ray4laz_designtime.lpk  ray4laz_designtime.pas  ray4laz_misc.pas  ray4laz_simpleprj.pas  regs.pas  synhighlighterglsl.pas  ushadertool.lfm  ushadertool.lrj  ushadertool.pas
source/: colors.inc  operators.inc  ray.canvas.pas  ray.engine2d.pas  ray.headers.pas  ray.sprites.pas  ray.typesex.pas  ray_gui.pas  ray_header.pas  ray_headers.pas  ray_math.pas  ray_rlgl.pas  raygui.pas  raylib.inc  raylib.pas  raymath.pas  rlgl.pas
temp/: audio_module_playing.compiled  standard_game.compiled
test/: project1  project1.lpi  (+1 more)
test in camera/: game  game.lpi  game.lpr  ray_sprite.pas
(+647 files in other folders)
